# ES_AP5

./: .gitignore  README.MD  pyproject.toml
.github/workflows/: ci.yml
tests/: __init__.py  test_cnpj.py  test_cpf.py
validator/: __init__.py  cnpj.py  cpf.py
