[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "validador-cpf-cnpj"
version = "1.0.0"
description = "Biblioteca para validação e formatação de CPF e CNPJ"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["validator"]
omit = ["tests/*"]
